# baolong

./: .cproject  .gitignore  CMakeLists.txt  E05_pit_demo.launch  main.cpp  备用文件.json  斜率补线.cpp  调试记录
CH341SER_LINUX/driver/: ch341.c
Debug/: E05_pit_demo.hex  E05_pit_demo.map  E05_pit_demo.mdf  TASKING_C_C___Compiler-Include_paths.opt  makefile  sources.mk
Debug/code/: subdir.mk
Debug/code/GUI/: GUI.d  application.d  display.d  port.d  subdir.mk
Debug/code/MPU6050/: subdir.mk
Debug/code/adjust/: adjust.d  edgeboard_uart.d  subdir.mk  vofa.d
Debug/code/base/: base.d  beep.d  encoder.d  imu660.d  inductance_adc.d  motor.d  mpu6050.d  subdir.mk  tof.d
Debug/code/control/: integral.d  mycar.d  pid.d  subdir.mk
Debug/code/interrupt_function/: subdir.mk  timer1_pwm.d  timer2.d  timer3_key.d  timer4_device.d
Debug/code/mpu/: subdir.mk
Debug/libraries/infineon_libraries/Infra/Platform/Tricore/Compilers/: CompilerDcc.d  CompilerGhs.d  CompilerGnuc.d  CompilerTasking.d  subdir.mk
Debug/libraries/infineon_libraries/Service/CpuGeneric/If/: SpiIf.d  subdir.mk
Debug/libraries/infineon_libraries/Service/CpuGeneric/StdIf/: IfxStdIf_DPipe.d  IfxStdIf_Pos.d  IfxStdIf_PwmHl.d  IfxStdIf_Timer.d  subdir.mk
Debug/libraries/infineon_libraries/Service/CpuGeneric/SysSe/Bsp/: Assert.d  Bsp.d  subdir.mk
Debug/libraries/infineon_libraries/Service/CpuGeneric/SysSe/Math/: Ifx_AngleTrkF32.d  Ifx_Cf32.d  Ifx_Crc.d  Ifx_FftF32.d  Ifx_FftF32_BitReverseTable.d  Ifx_FftF32_TwiddleTable.d  Ifx_IntegralF32.d  Ifx_LowPassPt1F32.d  Ifx_LutAtan2F32.d  Ifx_LutAtan2F32_Table.d  Ifx_LutLSincosF32.d  Ifx_LutLinearF32.d  Ifx_LutSincosF32.d  Ifx_LutSincosF32_Table.d  Ifx_RampF32.d  Ifx_WndF32_BlackmanHarrisTable.d  Ifx_WndF32_HannTable.d  subdir.mk
Debug/libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/: IfxAsclin_cfg.d  IfxCcu6_cfg.d  IfxCif_cfg.d  IfxCpu_cfg.d  IfxDma_cfg.d  IfxEmem_cfg.d  IfxEray_cfg.d  IfxFlash_cfg.d  IfxGtm_cfg.d  IfxHssl_cfg.d  IfxI2c_cfg.d  IfxMsc_cfg.d  IfxMtu_cfg.d  (+7 more)
Debug/libraries/zf_common/: subdir.mk  zf_common_clock.d  zf_common_debug.d  zf_common_fifo.d  zf_common_font.d  zf_common_function.d  zf_common_interrupt.d
Debug/libraries/zf_components/: subdir.mk
Debug/libraries/zf_device/: subdir.mk  zf_device_absolute_encoder.d  zf_device_bluetooth_ch9141.d  zf_device_camera.d  zf_device_dl1a.d  zf_device_dl1b.d  zf_device_gps_tau1201.d  zf_device_icm20602.d  zf_device_imu660ra.d  zf_device_imu963ra.d  zf_device_ips114.d  zf_device_ips200.d  zf_device_key.d  zf_device_mpu6050.d  zf_device_mt9v03x.d  zf_device_oled.d  zf_device_ov7725.d  zf_device_scc8660.d  zf_device_tft180.d  zf_device_tsl1401.d  zf_device_type.d  zf_device_virtual_oscilloscope.d  zf_device_wifi_spi.d  zf_device_wifi_uart.d  zf_device_wireless_uart.d
Debug/libraries/zf_device/zf_components/: subdir.mk
Debug/libraries/zf_driver/: subdir.mk  zf_driver_adc.d  zf_driver_delay.d  zf_driver_dma.d  zf_driver_encoder.d  zf_driver_exti.d  zf_driver_flash.d  zf_driver_gpio.d  zf_driver_pit.d  zf_driver_pwm.d  zf_driver_soft_iic.d  zf_driver_soft_spi.d  zf_driver_spi.d  zf_driver_timer.d  zf_driver_uart.d
Debug/user/: cpu0_main.d  cpu1_main.d  isr.d  subdir.mk
code/: global.h
code/GUI/: GUI.c  GUI.h  application.c  application.h  display.c  display.h  port.c  port.h
code/adjust/: adjust.c  adjust.h  edgeboard_uart.c  edgeboard_uart.h  vofa.c  vofa.h
code/base/: base.c  base.h  beep.c  beep.h  encoder.c  encoder.h  imu660.c  inductance_adc.c  inductance_adc.h  motor.c  motor.h  mpu6050.c  mpu6050.h  tof.c
code/control/: integral.c  integral.h  mycar.c  mycar.h  pid.c  pid.h
code/interrupt_function/: timer.h  timer1_pwm.c  timer2.c  timer3_key.c
include/: jibian.h  line.h  main.h  onMouse.h  picture.h  serial.h  xbox.h
libraries/zf_common/: zf_common_headfile.h
libraries/zf_device/: zf_device_camera.c  zf_device_camera.h  zf_device_ips200.c  zf_device_ips200.h  zf_device_mpu6050.h
res/calibration/: assessment.txt  calibration.xml  ÎÄ¼þËµÃ÷.txt
src/: CMakeLists.txt  jibian.cpp  line.cpp  on_Mouse.cpp  picture.cpp  serial.cpp  vofa.cpp  xbox.cpp
src/config/: config.json
src/include/: common.hpp  detection.hpp  mainwindow.h  uart.hpp
src/src/: controlcenter.cpp  icar.cpp  mainwindow.cpp  mapping.cpp  motion.cpp  preprocess.cpp
src/src/CAM/: global.h
src/src/CAM/GUI/: application.c  application.h
src/src/CAM/camera_process/: Binarization.c  Binarization.h  Element_recognition.c  Element_recognition.h  act_persp.c  act_persp.h  black_obstacle.c  black_obstacle.h  broken_circuit.c  broken_circuit.h  circle.c  circle.h  cross.c  cross.h  garage.c  garage.h  obstacle.c  obstacle.h  patch_line.c  patch_line.h  scan_line.c  scan_line.h  slope.c  slope.h  zebra.c  zebra.h
src/src/CAM/control/: err_calculation.c  err_calculation.h  filter.c  filter.h  fuzzy_pid.c  fuzzy_pid.h  integral.c  integral.h  mycar.c  mycar.h  pid.c  pid.h
src/src/CAM_cpp/: global.hpp
src/src/CAM_cpp/GUI/: application.cpp  application.hpp
src/src/CAM_cpp/camera_process/: Binarization.cpp  Binarization.hpp  Element_recognition.cpp  Element_recognition.hpp  act_persp.cpp  act_persp.hpp  black_obstacle.cpp  black_obstacle.hpp  broken_circuit.cpp  broken_circuit.hpp  circle.cpp  circle.hpp  cross.cpp  cross.hpp  garage.cpp  garage.hpp  obstacle.cpp  obstacle.hpp  patch_line.cpp  patch_line.hpp  scan_line.cpp  scan_line.hpp  slope.cpp  slope.hpp  zebra.cpp  zebra.hpp
src/src/CAM_cpp/control/: err_calculation.cpp  err_calculation.hpp  filter.cpp  filter.hpp  fuzzy_pid.cpp  fuzzy_pid.hpp  integral.cpp  integral.hpp  mycar.cpp  mycar.hpp  pid.cpp  pid.hpp
src/src/detection/: bridge.cpp  danger.cpp  parking.cpp  racing.cpp  rescue.cpp
src/src/recognition/: Element_recognition.cpp  Element_recognition.h  circle.cpp  circle.h  cross.cpp  cross.h  crossroad.cpp  crossroad2.cpp  ring.cpp  tracking.cpp
src/tool/: calibration.cpp  collection.cpp
src/备用config/: 1.2的.json  1.6de.json  1.6的.json  1.8de.json  2.0de.json  config.json
user/: cpu0_main.c  cpu0_main.h  cpu1_main.c  isr.c  isr.h  isr_config.h
(+79 files in other folders)
